started personal site

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
 
+<head>
+
+	<title> William Hedges</title>
+
+</head>
+
 <body>
 
-	<ul>
+	<h1>Will Hedges	</h1>
 
-		<li> Memes </li>
-		<li> No memes </li>
-		<li> Bad memes </li>
-		<li> sex emeejssuij</li> 
 
-	</ul>
+	<p> Welcome to the official </p>
 
 </body>
 
